fix(api): get recipe detail
